# weather_bot

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  requirements.txt
configs/: example-config.yml
migrations/: env.py
migrations/versions/: b7bd3ee8e436_init.py
src/: config.py
src/filters/: __ini__.py  chat.py  chat_type.py
src/handlers/: __init__.py
src/handlers/channel/: __init__.py
src/handlers/group/: __init__.py
src/handlers/private/: __init__.py
src/handlers/private/admin/: __init__.py  statistic.py
src/handlers/private/user/: __init__.py  start.py  weather.py
src/middlewares/: __init__.py  user.py
src/models/: __init__.py  user.py
src/repositories/: __init__.py  user.py
src/service/: database.py  weather_api.py
src/utils/: commands.py  logs.py
